@@ -10,7 +10,8 @@ Android Client
 iOS Client
 -
 Server
--
+- TeamTalk Pro option -weblogin to store BearWare.dk WebLogin in tt5prosrv.xml
+- TeamTalk Pro option -tokenlogin to store BearWare.dk WebLogin in tt5prosrv.xml
 
 Version 5.21, 2025/09/29
 Default Qt Client
